implement fraud real time notification

--- a/ml-models/recommendation-system/update_data.ipynb
+++ b/ml-models/recommendation-system/update_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": 3,
    "id": "1c65d3cd-eb15-4906-9d0e-a23596001f15",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 780,
+   "execution_count": 5,
    "id": "86d78fed-1105-4af6-9448-0f999df618a4",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 783,
+   "execution_count": 9,
    "id": "2087cd0f-2f71-4b7a-a5fd-a104b465ad74",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 785,
+   "execution_count": 11,
    "id": "a64638d0-c6d3-4c5e-a3d1-4894cfbc3b05",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 787,
+   "execution_count": 13,
    "id": "c3f4d896-8e68-4311-bf40-8220ecbd34e6",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 789,
+   "execution_count": 15,
    "id": "f1e51293-15c0-4e0d-8aac-1c2f6bf28409",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "1  attendee  "
       ]
      },
-     "execution_count": 789,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 792,
+   "execution_count": 18,
    "id": "76d18737-7482-42d1-a532-9639f9c04f47",
    "metadata": {},
    "outputs": [
@@ -257,26 +257,32 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1 entries, 0 to 0\n",
+      "RangeIndex: 4 entries, 0 to 3\n",
       "Data columns (total 5 columns):\n",
       " #   Column            Non-Null Count  Dtype         \n",
       "---  ------            --------------  -----         \n",
-      " 0   event_id          1 non-null      object        \n",
-      " 1   category          1 non-null      object        \n",
-      " 2   event_date        1 non-null      datetime64[ns]\n",
-      " 3   createdAt         1 non-null      datetime64[ns]\n",
-      " 4   popularity_score  1 non-null      float64       \n",
+      " 0   event_id          4 non-null      object        \n",
+      " 1   category          4 non-null      object        \n",
+      " 2   event_date        4 non-null      datetime64[ns]\n",
+      " 3   createdAt         4 non-null      datetime64[ns]\n",
+      " 4   popularity_score  4 non-null      float64       \n",
       "dtypes: datetime64[ns](2), float64(1), object(2)\n",
-      "memory usage: 172.0+ bytes\n",
+      "memory usage: 292.0+ bytes\n",
       "----------------------------------------------------------------------\n",
-      "                    event_id category  popularity_score event_date  \\\n",
-      "0  cmdj12tbd0002gbikcfzrhtgm    Movie               0.0 2025-07-27   \n",
+      "                    event_id  category  popularity_score event_date  \\\n",
+      "0  cmdrymxwv0001gb6sesbr516b  Festival               4.0 2026-07-15   \n",
+      "1  cmdryq75c000ggb6sybjh54ik  Workshop               0.0 2026-07-23   \n",
+      "2  cmdrynwbq0006gb6sfg7vig9e   Concert               4.0 2026-07-28   \n",
+      "3  cmdryoz04000bgb6s6v26zjyr     Movie              29.0 2026-07-21   \n",
       "\n",
       "                createdAt  is_weekend  \n",
-      "0 2025-07-25 16:20:48.744        True  \n",
+      "0 2025-07-31 22:22:24.556       False  \n",
+      "1 2025-07-31 22:24:56.497       False  \n",
+      "2 2025-07-31 22:23:09.159       False  \n",
+      "3 2025-07-31 22:23:59.284       False  \n",
       "----------------------------------------------------------------------\n",
       "\n",
-      "Shape: (1, 6)\n"
+      "Shape: (4, 6)\n"
      ]
     }
    ],
@@ -322,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 795,
+   "execution_count": 21,
    "id": "fafe84bc-544e-4cac-bc89-8972d89d46f2",
    "metadata": {},
    "outputs": [
@@ -331,15 +337,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 5 entries, 0 to 4\n",
+      "RangeIndex: 4 entries, 0 to 3\n",
       "Data columns (total 3 columns):\n",
       " #   Column     Non-Null Count  Dtype         \n",
       "---  ------     --------------  -----         \n",
-      " 0   user_id    5 non-null      object        \n",
-      " 1   event_id   5 non-null      object        \n",
-      " 2   createdAt  5 non-null      datetime64[ns]\n",
+      " 0   user_id    4 non-null      object        \n",
+      " 1   event_id   4 non-null      object        \n",
+      " 2   createdAt  4 non-null      datetime64[ns]\n",
       "dtypes: datetime64[ns](1), object(2)\n",
-      "memory usage: 252.0+ bytes\n"
+      "memory usage: 228.0+ bytes\n"
      ]
     },
     {
@@ -372,32 +378,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>cmdj139f30005gbika35k4jov</td>\n",
-       "      <td>cmdj12tbd0002gbikcfzrhtgm</td>\n",
-       "      <td>2025-07-25 22:31:56.869</td>\n",
+       "      <td>cmdrynwbq0006gb6sfg7vig9e</td>\n",
+       "      <td>2025-07-31 23:25:57.567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>cmdj139f30005gbika35k4jov</td>\n",
-       "      <td>cmdj12tbd0002gbikcfzrhtgm</td>\n",
-       "      <td>2025-07-25 22:31:56.917</td>\n",
+       "      <td>cmdrynwbq0006gb6sfg7vig9e</td>\n",
+       "      <td>2025-07-31 23:25:57.621</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>cmdj139f30005gbika35k4jov</td>\n",
-       "      <td>cmdj12tbd0002gbikcfzrhtgm</td>\n",
-       "      <td>2025-07-25 22:31:56.932</td>\n",
+       "      <td>cmdrynwbq0006gb6sfg7vig9e</td>\n",
+       "      <td>2025-07-31 23:25:57.654</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>cmdj139f30005gbika35k4jov</td>\n",
-       "      <td>cmdj12tbd0002gbikcfzrhtgm</td>\n",
-       "      <td>2025-07-25 22:31:56.944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>cmdj139f30005gbika35k4jov</td>\n",
-       "      <td>cmdj12tbd0002gbikcfzrhtgm</td>\n",
-       "      <td>2025-07-25 22:31:56.957</td>\n",
+       "      <td>cmdrynwbq0006gb6sfg7vig9e</td>\n",
+       "      <td>2025-07-31 23:25:57.684</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -405,21 +405,19 @@
       ],
       "text/plain": [
        "                     user_id                   event_id  \\\n",
-       "0  cmdj139f30005gbika35k4jov  cmdj12tbd0002gbikcfzrhtgm   \n",
-       "1  cmdj139f30005gbika35k4jov  cmdj12tbd0002gbikcfzrhtgm   \n",
-       "2  cmdj139f30005gbika35k4jov  cmdj12tbd0002gbikcfzrhtgm   \n",
-       "3  cmdj139f30005gbika35k4jov  cmdj12tbd0002gbikcfzrhtgm   \n",
-       "4  cmdj139f30005gbika35k4jov  cmdj12tbd0002gbikcfzrhtgm   \n",
+       "0  cmdj139f30005gbika35k4jov  cmdrynwbq0006gb6sfg7vig9e   \n",
+       "1  cmdj139f30005gbika35k4jov  cmdrynwbq0006gb6sfg7vig9e   \n",
+       "2  cmdj139f30005gbika35k4jov  cmdrynwbq0006gb6sfg7vig9e   \n",
+       "3  cmdj139f30005gbika35k4jov  cmdrynwbq0006gb6sfg7vig9e   \n",
        "\n",
        "                createdAt  \n",
-       "0 2025-07-25 22:31:56.869  \n",
-       "1 2025-07-25 22:31:56.917  \n",
-       "2 2025-07-25 22:31:56.932  \n",
-       "3 2025-07-25 22:31:56.944  \n",
-       "4 2025-07-25 22:31:56.957  "
+       "0 2025-07-31 23:25:57.567  \n",
+       "1 2025-07-31 23:25:57.621  \n",
+       "2 2025-07-31 23:25:57.654  \n",
+       "3 2025-07-31 23:25:57.684  "
       ]
      },
-     "execution_count": 795,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 799,
+   "execution_count": 25,
    "id": "714f358f-3b5c-4c52-8406-f5356144018e",
    "metadata": {},
    "outputs": [],
@@ -471,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 801,
+   "execution_count": 27,
    "id": "0b139c17-69e7-45b3-8d93-5ed1d5b6f68e",
    "metadata": {},
    "outputs": [],
@@ -489,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 804,
+   "execution_count": 30,
    "id": "8ce3e9ae-cd85-4963-83f9-1bc1f43805ed",
    "metadata": {},
    "outputs": [],
@@ -503,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 810,
+   "execution_count": 32,
    "id": "684da345-2d75-485a-b2be-7e8b48b20ab2",
    "metadata": {},
    "outputs": [
@@ -518,26 +516,30 @@
       "1  cmdj139f30005gbika35k4jov  female     18-25  attendee\n",
       "\n",
       "Cleaned Events Sample:\n",
-      "                    event_id category  popularity_score  event_date  \\\n",
-      "0  cmdj12tbd0002gbikcfzrhtgm    Movie               0.0  2025-07-27   \n",
+      "                    event_id  category  popularity_score  event_date  \\\n",
+      "0  cmdrymxwv0001gb6sesbr516b  Festival          0.137931  2026-07-15   \n",
+      "1  cmdryq75c000ggb6sybjh54ik  Workshop          0.000000  2026-07-23   \n",
+      "2  cmdrynwbq0006gb6sfg7vig9e   Concert          0.137931  2026-07-28   \n",
+      "3  cmdryoz04000bgb6s6v26zjyr     Movie          1.000000  2026-07-21   \n",
       "\n",
       "                createdAt  is_weekend  \n",
-      "0 2025-07-25 16:20:48.744        True  \n",
+      "0 2025-07-31 22:22:24.556       False  \n",
+      "1 2025-07-31 22:24:56.497       False  \n",
+      "2 2025-07-31 22:23:09.159       False  \n",
+      "3 2025-07-31 22:23:59.284       False  \n",
       "\n",
       "Cleaned Interactions Sample:\n",
       "                     user_id                   event_id  \\\n",
-      "0  cmdj139f30005gbika35k4jov  cmdj12tbd0002gbikcfzrhtgm   \n",
-      "1  cmdj139f30005gbika35k4jov  cmdj12tbd0002gbikcfzrhtgm   \n",
-      "2  cmdj139f30005gbika35k4jov  cmdj12tbd0002gbikcfzrhtgm   \n",
-      "3  cmdj139f30005gbika35k4jov  cmdj12tbd0002gbikcfzrhtgm   \n",
-      "4  cmdj139f30005gbika35k4jov  cmdj12tbd0002gbikcfzrhtgm   \n",
+      "0  cmdj139f30005gbika35k4jov  cmdrynwbq0006gb6sfg7vig9e   \n",
+      "1  cmdj139f30005gbika35k4jov  cmdrynwbq0006gb6sfg7vig9e   \n",
+      "2  cmdj139f30005gbika35k4jov  cmdrynwbq0006gb6sfg7vig9e   \n",
+      "3  cmdj139f30005gbika35k4jov  cmdrynwbq0006gb6sfg7vig9e   \n",
       "\n",
       "                createdAt  \n",
-      "0 2025-07-25 22:31:56.869  \n",
-      "1 2025-07-25 22:31:56.917  \n",
-      "2 2025-07-25 22:31:56.932  \n",
-      "3 2025-07-25 22:31:56.944  \n",
-      "4 2025-07-25 22:31:56.957  \n"
+      "0 2025-07-31 23:25:57.567  \n",
+      "1 2025-07-31 23:25:57.621  \n",
+      "2 2025-07-31 23:25:57.654  \n",
+      "3 2025-07-31 23:25:57.684  \n"
      ]
     }
    ],
@@ -554,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 812,
+   "execution_count": 34,
    "id": "6c5068a9-14b7-4362-b28c-3d651e415fb8",
    "metadata": {},
    "outputs": [],
@@ -575,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 814,
+   "execution_count": 36,
    "id": "d54d5159-7142-48ab-b79c-838b11865e80",
    "metadata": {},
    "outputs": [],
