feat: add Dockerfiles for Node and FastAPI, docker-compose setup, GitHub Actions workflow update, and features: pagination, favorites toggle, get favorites

--- a/ml-models/recommendation-system/update_data.ipynb
+++ b/ml-models/recommendation-system/update_data.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine(\"postgresql://postgres:postgres@localhost:5433/snapreserve\")"
+    "engine = create_engine(\"postgresql://postgres:postgres@host.docker.internal:5433/snapreserve\")"
    ]
   },
   {
