--- a/ml-models/recommendation-system/update_data.ipynb
+++ b/ml-models/recommendation-system/update_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1231,
+   "execution_count": 2,
    "id": "1c65d3cd-eb15-4906-9d0e-a23596001f15",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1234,
+   "execution_count": 4,
    "id": "86d78fed-1105-4af6-9448-0f999df618a4",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1237,
+   "execution_count": 8,
    "id": "2087cd0f-2f71-4b7a-a5fd-a104b465ad74",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1239,
+   "execution_count": 10,
    "id": "a64638d0-c6d3-4c5e-a3d1-4894cfbc3b05",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1241,
+   "execution_count": 12,
    "id": "c3f4d896-8e68-4311-bf40-8220ecbd34e6",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1243,
+   "execution_count": 14,
    "id": "27ac5691-d3bc-41db-80a2-eb15918feb32",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1245,
+   "execution_count": 16,
    "id": "f1e51293-15c0-4e0d-8aac-1c2f6bf28409",
    "metadata": {},
    "outputs": [
@@ -153,29 +153,29 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 0 entries\n",
+      "RangeIndex: 2 entries, 0 to 1\n",
       "Data columns (total 4 columns):\n",
-      " #   Column      Non-Null Count  Dtype \n",
-      "---  ------      --------------  ----- \n",
-      " 0   user_id     0 non-null      object\n",
-      " 1   gender      0 non-null      object\n",
-      " 2   birth_date  0 non-null      object\n",
-      " 3   created_at  0 non-null      object\n",
-      "dtypes: object(4)\n",
-      "memory usage: 132.0+ bytes\n",
+      " #   Column      Non-Null Count  Dtype         \n",
+      "---  ------      --------------  -----         \n",
+      " 0   user_id     2 non-null      object        \n",
+      " 1   gender      1 non-null      object        \n",
+      " 2   birth_date  1 non-null      datetime64[ns]\n",
+      " 3   created_at  2 non-null      datetime64[ns]\n",
+      "dtypes: datetime64[ns](2), object(2)\n",
+      "memory usage: 196.0+ bytes\n",
       "----------------------------------------------------------------------\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 0 entries\n",
+      "Index: 0 entries\n",
       "Data columns (total 5 columns):\n",
       " #   Column      Non-Null Count  Dtype         \n",
       "---  ------      --------------  -----         \n",
       " 0   user_id     0 non-null      object        \n",
       " 1   gender      0 non-null      object        \n",
-      " 2   created_at  0 non-null      object        \n",
-      " 3   age_group   0 non-null      datetime64[ns]\n",
+      " 2   created_at  0 non-null      datetime64[ns]\n",
+      " 3   age_group   0 non-null      object        \n",
       " 4   role        0 non-null      object        \n",
       "dtypes: datetime64[ns](1), object(4)\n",
-      "memory usage: 132.0+ bytes\n",
+      "memory usage: 0.0+ bytes\n",
       "None\n",
       "----------------------------------------------------------------------\n",
       "Empty DataFrame\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1248,
+   "execution_count": 19,
    "id": "76d18737-7482-42d1-a532-9639f9c04f47",
    "metadata": {},
    "outputs": [
@@ -241,24 +241,28 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 0 entries\n",
+      "RangeIndex: 2 entries, 0 to 1\n",
       "Data columns (total 5 columns):\n",
-      " #   Column            Non-Null Count  Dtype \n",
-      "---  ------            --------------  ----- \n",
-      " 0   event_id          0 non-null      object\n",
-      " 1   category          0 non-null      object\n",
-      " 2   event_date        0 non-null      object\n",
-      " 3   createdAt         0 non-null      object\n",
-      " 4   popularity_score  0 non-null      object\n",
-      "dtypes: object(5)\n",
-      "memory usage: 132.0+ bytes\n",
+      " #   Column            Non-Null Count  Dtype         \n",
+      "---  ------            --------------  -----         \n",
+      " 0   event_id          2 non-null      object        \n",
+      " 1   category          2 non-null      object        \n",
+      " 2   event_date        2 non-null      datetime64[ns]\n",
+      " 3   createdAt         2 non-null      datetime64[ns]\n",
+      " 4   popularity_score  2 non-null      float64       \n",
+      "dtypes: datetime64[ns](2), float64(1), object(2)\n",
+      "memory usage: 212.0+ bytes\n",
       "----------------------------------------------------------------------\n",
-      "Empty DataFrame\n",
-      "Columns: [event_id, category, popularity_score, event_date, createdAt, is_weekend]\n",
-      "Index: []\n",
+      "                    event_id category  popularity_score event_date  \\\n",
+      "0  cmed0gg1g0001gbx8v469zhjh  Concert               0.0 2025-08-22   \n",
+      "1  cmed0a4so0001gbssc50f2y91  Concert               0.0 2023-07-15   \n",
+      "\n",
+      "                createdAt  is_weekend  \n",
+      "0 2025-08-15 15:56:30.388       False  \n",
+      "1 2025-08-15 15:51:35.880        True  \n",
       "----------------------------------------------------------------------\n",
       "\n",
-      "Shape: (0, 6)\n"
+      "Shape: (2, 6)\n"
      ]
     }
    ],
@@ -304,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1251,
+   "execution_count": 22,
    "id": "fafe84bc-544e-4cac-bc89-8972d89d46f2",
    "metadata": {},
    "outputs": [
@@ -313,15 +317,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 5 entries, 0 to 4\n",
+      "RangeIndex: 2 entries, 0 to 1\n",
       "Data columns (total 3 columns):\n",
       " #   Column     Non-Null Count  Dtype         \n",
       "---  ------     --------------  -----         \n",
-      " 0   user_id    5 non-null      object        \n",
-      " 1   event_id   5 non-null      object        \n",
-      " 2   createdAt  5 non-null      datetime64[ns]\n",
+      " 0   user_id    2 non-null      object        \n",
+      " 1   event_id   2 non-null      object        \n",
+      " 2   createdAt  2 non-null      datetime64[ns]\n",
       "dtypes: datetime64[ns](1), object(2)\n",
-      "memory usage: 252.0+ bytes\n"
+      "memory usage: 180.0+ bytes\n"
      ]
     },
     {
@@ -353,33 +357,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>cmeacur5r0014gbzgwwxfxg1w</td>\n",
-       "      <td>cmeaboyn5000fgbzgmgckw5xu</td>\n",
-       "      <td>2025-08-13 19:24:13.605</td>\n",
+       "      <td>cmeaizh2i0003gbu8vrcpgzrk</td>\n",
+       "      <td>cmeabu0j3000ngbzgxjbhqf5x</td>\n",
+       "      <td>2025-08-15 10:20:37.481</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>cmeacur5r0014gbzgwwxfxg1w</td>\n",
-       "      <td>cmeaboyn5000fgbzgmgckw5xu</td>\n",
-       "      <td>2025-08-13 19:24:13.617</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>cmeacur5r0014gbzgwwxfxg1w</td>\n",
-       "      <td>cmeaboyn5000fgbzgmgckw5xu</td>\n",
-       "      <td>2025-08-13 19:24:13.631</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>cmeacur5r0014gbzgwwxfxg1w</td>\n",
-       "      <td>cmeaboyn5000fgbzgmgckw5xu</td>\n",
-       "      <td>2025-08-13 19:24:13.644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>cmeacur5r0014gbzgwwxfxg1w</td>\n",
-       "      <td>cmeaboyn5000fgbzgmgckw5xu</td>\n",
-       "      <td>2025-08-13 19:24:13.656</td>\n",
+       "      <td>cmeaizh2i0003gbu8vrcpgzrk</td>\n",
+       "      <td>cmeabu0j3000ngbzgxjbhqf5x</td>\n",
+       "      <td>2025-08-15 10:20:37.578</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -387,21 +373,15 @@
       ],
       "text/plain": [
        "                     user_id                   event_id  \\\n",
-       "0  cmeacur5r0014gbzgwwxfxg1w  cmeaboyn5000fgbzgmgckw5xu   \n",
-       "1  cmeacur5r0014gbzgwwxfxg1w  cmeaboyn5000fgbzgmgckw5xu   \n",
-       "2  cmeacur5r0014gbzgwwxfxg1w  cmeaboyn5000fgbzgmgckw5xu   \n",
-       "3  cmeacur5r0014gbzgwwxfxg1w  cmeaboyn5000fgbzgmgckw5xu   \n",
-       "4  cmeacur5r0014gbzgwwxfxg1w  cmeaboyn5000fgbzgmgckw5xu   \n",
+       "0  cmeaizh2i0003gbu8vrcpgzrk  cmeabu0j3000ngbzgxjbhqf5x   \n",
+       "1  cmeaizh2i0003gbu8vrcpgzrk  cmeabu0j3000ngbzgxjbhqf5x   \n",
        "\n",
        "                createdAt  \n",
-       "0 2025-08-13 19:24:13.605  \n",
-       "1 2025-08-13 19:24:13.617  \n",
-       "2 2025-08-13 19:24:13.631  \n",
-       "3 2025-08-13 19:24:13.644  \n",
-       "4 2025-08-13 19:24:13.656  "
+       "0 2025-08-15 10:20:37.481  \n",
+       "1 2025-08-15 10:20:37.578  "
       ]
      },
-     "execution_count": 1251,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1255,
+   "execution_count": 26,
    "id": "714f358f-3b5c-4c52-8406-f5356144018e",
    "metadata": {},
    "outputs": [],
@@ -453,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1257,
+   "execution_count": 28,
    "id": "0b139c17-69e7-45b3-8d93-5ed1d5b6f68e",
    "metadata": {},
    "outputs": [],
@@ -471,18 +451,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1260,
+   "execution_count": 31,
    "id": "8ce3e9ae-cd85-4963-83f9-1bc1f43805ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: db_events is empty. Skipping scaling step.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not db_events.empty:\n",
     "    scaler = MinMaxScaler()\n",
@@ -493,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1262,
+   "execution_count": 33,
    "id": "684da345-2d75-485a-b2be-7e8b48b20ab2",
    "metadata": {},
    "outputs": [
@@ -508,24 +480,22 @@
       "Index: []\n",
       "\n",
       "Cleaned Events Sample:\n",
-      "Empty DataFrame\n",
-      "Columns: [event_id, category, popularity_score, event_date, createdAt, is_weekend]\n",
-      "Index: []\n",
+      "                    event_id category  popularity_score  event_date  \\\n",
+      "0  cmed0gg1g0001gbx8v469zhjh  Concert               0.0  2025-08-22   \n",
+      "1  cmed0a4so0001gbssc50f2y91  Concert               0.0  2023-07-15   \n",
+      "\n",
+      "                createdAt  is_weekend  \n",
+      "0 2025-08-15 15:56:30.388       False  \n",
+      "1 2025-08-15 15:51:35.880        True  \n",
       "\n",
       "Cleaned Interactions Sample:\n",
       "                     user_id                   event_id  \\\n",
-      "0  cmeacur5r0014gbzgwwxfxg1w  cmeaboyn5000fgbzgmgckw5xu   \n",
-      "1  cmeacur5r0014gbzgwwxfxg1w  cmeaboyn5000fgbzgmgckw5xu   \n",
-      "2  cmeacur5r0014gbzgwwxfxg1w  cmeaboyn5000fgbzgmgckw5xu   \n",
-      "3  cmeacur5r0014gbzgwwxfxg1w  cmeaboyn5000fgbzgmgckw5xu   \n",
-      "4  cmeacur5r0014gbzgwwxfxg1w  cmeaboyn5000fgbzgmgckw5xu   \n",
+      "0  cmeaizh2i0003gbu8vrcpgzrk  cmeabu0j3000ngbzgxjbhqf5x   \n",
+      "1  cmeaizh2i0003gbu8vrcpgzrk  cmeabu0j3000ngbzgxjbhqf5x   \n",
       "\n",
       "                createdAt  \n",
-      "0 2025-08-13 19:24:13.605  \n",
-      "1 2025-08-13 19:24:13.617  \n",
-      "2 2025-08-13 19:24:13.631  \n",
-      "3 2025-08-13 19:24:13.644  \n",
-      "4 2025-08-13 19:24:13.656  \n"
+      "0 2025-08-15 10:20:37.481  \n",
+      "1 2025-08-15 10:20:37.578  \n"
      ]
     }
    ],
@@ -542,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1264,
+   "execution_count": 35,
    "id": "6c5068a9-14b7-4362-b28c-3d651e415fb8",
    "metadata": {},
    "outputs": [],
@@ -566,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1266,
+   "execution_count": 37,
    "id": "d54d5159-7142-48ab-b79c-838b11865e80",
    "metadata": {},
    "outputs": [],
